# GATE

./: README.MD  README.md  pyproject.toml
data/eigenvectorsMP/: Autovalori_d4_0.txt  Autovalori_d4_1.txt  Autovalori_d4_2.txt  Autovalori_d4_3.txt  Stato_d4_0.txt  Stato_d4_1.txt  Stato_d4_2.txt  Stato_d4_3.txt
data/eigenvectorsMPQ/: Autovalori_d2_0.txt  Autovalori_d2_1.txt  Autovalori_d4_0.txt  Autovalori_d4_1.txt  Autovalori_d4_2.txt  Autovalori_d4_3.txt  Stato_d2_0.txt  Stato_d2_1.txt  Stato_d4_0.txt  Stato_d4_1.txt  Stato_d4_1_VQD.txt  Stato_d4_2.txt  Stato_d4_2_VQD.txt  Stato_d4_3.txt  Stato_d4_3_VVQE.txt  Stato_d8_2_VVQE.txt  Stato_d8_5_VVQE.txt  attesi_4.txt  errori_4_0_VQD.txt  errori_4_1_VVQE.txt  errori_4_2_VQD.txt  errori_8_0_VVQE.txt  errori_8_2_VVQE.txt  errori_8_3_VVQE.txt  errori_8_7_VVQE.txt  esito_4_1_VVQE.txt  esito_4_2_VQD.txt  esito_4_2_VVQE.txt  esito_4_3_VVQE.txt  esito_8_0_VVQE.txt  esito_8_1_VVQE.txt  esito_8_2_VVQE.txt  esito_8_3_VVQE.txt  esito_8_4_VVQE.txt  esito_8_5_VVQE.txt  esito_8_6_VVQE.txt  esito_8_7_VVQE.txt  medie_4_0_VQD.txt  medie_4_1_VQD.txt  medie_4_2_VQD.txt  (+8 more)
data/errori/: EvTemp00.txt  EvTemp01.txt  EvTemp10.txt  EvTemp101.txt  EvTemp111.txt  EvTemp120.txt  EvTemp121.txt  EvTemp130.txt  EvTemp140.txt  EvTemp141.txt  EvTemp151.txt  EvTemp161.txt  EvTemp181.txt  EvTemp190.txt  EvTemp191.txt  EvTemp20.txt  EvTemp30.txt  EvTemp31.txt  EvTemp40.txt  EvTemp60.txt  EvTemp61.txt  EvTemp70.txt  (+3 more)
gaugeSpectrum/: analisiDati3PL.py  moduliHRcircuiti.py
plaquettesEvolution/: Evoluzione3Pl.py  evConErrori.py  moduliEvoluzionePlacchette.py
(+142 files in other folders)
